# hymls

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  status
bak-example/: HYMLS_ExampleLocaInterface-JADA.C  HYMLS_ExampleLocaInterface-JADA.H  HYMLS_ExampleLocaInterface-SOL.C  HYMLS_ExampleLocaInterface-SOL.H  HYMLS_ExampleLocaInterface-fixb.C  HYMLS_ExampleLocaInterface-para.C  HYMLS_ExampleLocaInterface.C-jada  HYMLS_ExampleLocaInterface.C-sol  main_continuation-jada.C  (+3 more)
matlab/: CMakeLists.txt  HYMLS.m  HYMLS_apply.C  HYMLS_apply.cpp  HYMLS_free.C  HYMLS_free.cpp  HYMLS_init.C  HYMLS_init.cpp  HYMLS_set_border.C  HYMLS_set_border.cpp  SymSols.m  VisPsi.m  VisTrilVec.m  VismmVec.m  mmread.m  mmwrite.m  showV.m
matlab/test/: test_stokes0.m
python/: CMakeLists.txt  Command.py  HYMLS.i  HYMLS.i.in  gen_apple_wrappers.py  gen_hymls.py  init.py  reformat.py  vsm.py
src/: .HYMLS_Preconditioner.C.swp  .HYMLS_Solver.C.swp  .main_utils.C.swp  AnasaziPhistSolMgr.hpp  BelosExtBlockGmresSolMgr.hpp  CMakeLists.txt  EpetraExt_RestrictedCrsMatrixWrapper.cpp  EpetraExt_RestrictedCrsMatrixWrapper.h  EpetraExt_RestrictedMultiVectorWrapper.cpp  EpetraExt_RestrictedMultiVectorWrapper.h  GaleriExt_Cross2DN.h  GaleriExt_Cross3DN.h  GaleriExt_CrsMatrices.cpp  GaleriExt_CrsMatrices.h  GaleriExt_Darcy2D.h  GaleriExt_Darcy3D.h  GaleriExt_Periodic.cpp  GaleriExt_Periodic.h  GaleriExt_Star3D.h  GaleriExt_Stokes2D.h  GaleriExt_Stokes3D.h  HYMLS_AugmentedMatrix.C  HYMLS_AugmentedMatrix.H  HYMLS_AugmentedMatrix.cpp  HYMLS_AugmentedMatrix.hpp  HYMLS_BaseCartesianPartitioner.C  HYMLS_BaseCartesianPartitioner.H  HYMLS_BaseNodeClassifier.H  HYMLS_BasePartitioner.C  HYMLS_BasePartitioner.H  HYMLS_BasePartitioner.cpp  HYMLS_BasePartitioner.hpp  HYMLS_BaseSolver.C  HYMLS_BaseSolver.H  HYMLS_BaseSolver.cpp  HYMLS_BaseSolver.hpp  HYMLS_BelosEpetraOperator.C  HYMLS_BelosEpetraOperator.H  HYMLS_BlockScaling.C  HYMLS_BlockScaling.H  (+173 more)
src/evp/: .AnasaziPhistSolMgr.hpp.swp  AnasaziHymlsAdapter.hpp  AnasaziJacobiDavidson.hpp  AnasaziJacobiDavidsonSolMgr.hpp  AnasaziPhistSolMgr.hpp  AnasaziPreconditionerTraits.hpp  dummy.cpp  jadaCorrectionSolver_impl.C  jadaCorrectionSolver_impl.H
testSuite/: CMakeLists.txt  Makefile  cavity.xml  cavity3D.xml  cavity3D_eigs.xml  convdiff.xml  convdiff_ML.xml  darcy.xml  graphene.xml  laplace.xml  laplace_ML.xml  laplace_eigs.xml  neumann.xml  stokes2D.xml  tc.xml  turing-2d.xml  turing-3d.xml  turing.xml
testSuite/data/DrivenCavity/128x128/Re0/: rhs.mtx  sol.mtx
testSuite/data/DrivenCavity/128x128/Re100/: jac.mtx  rhs.mtx  sol.mtx
testSuite/data/DrivenCavity/16x16x16/Re0/: jac.mtx  mass.mtx  rhs.mtx  sol.mtx
testSuite/data/DrivenCavity/32x32/Re0/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/DrivenCavity/32x32/Re100/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/DrivenCavity/32x32/Re1000/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/DrivenCavity/32x32x32/Re0/: rhs.mtx  sol.mtx
testSuite/data/DrivenCavity/64x64/Re0/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/DrivenCavity/64x64/Re100/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/DrivenCavity/64x64/Re1000/: jac.mtx  jac2.mtx  rhs.mtx  rhs2.mtx  sol.mtx  sol2.mtx
testSuite/data/Graphene/128x64/: jac.mtx
testSuite/data/Graphene/256x128/: jac.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/16x16/Re0/: jac.mtx  rhs.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/16x16/Re100/: jac.mtx  rhs.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/32x32/Re0/: jac.mtx  sol.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/32x32/Re100/: jac.mtx  rhs.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/64x64/Re0/: jac.mtx  rhs.mtx
testSuite/data/Ifiss/LeakyCavity/Q1P0/64x64/Re100/: rhs.mtx
testSuite/data/Turing/: nullSpace.txt  turing.xml
testSuite/data/Turing/128x128/: nullSpace.mtx
testSuite/data/Turing/32x32/: jac.mtx  nullSpace.mtx
testSuite/data/Turing/64x64/: jac.mtx  nullSpace.mtx
testSuite/data/Turing/S1/32x32/: jac.mtx  nullSpace.mtx
testSuite/data/Turing/stable-S3/32x32/: jac.mtx
testSuite/data/Turing/stable-S3/64x64/: jac.mtx
testSuite/data/Turing/unstable-S1/32x32/: jac.mtx  nullSpace.mtx  rhs.mtx
testSuite/data/Turing/unstable-S1/64x64/: jac.mtx
testSuite/integration_tests/: CMakeLists.txt  all_tests.xml  bordering1.xml  bordering2.xml  default.xml  deflation1.xml  deflation1_bordering.xml  integration_tests.C  integration_tests.cpp  laplace1.xml  laplace1_deflation.xml  laplace1_eigs.xml  laplace1_eigs_deflation.xml  laplace2.xml  laplace2_eigs.xml  laplace3.xml  stokes0.xml  stokes0_3D.xml  stokes1.xml  stokes1_3D.xml  stokes2.xml  stokes2_3D.xml  stokes3.xml  stokes4.xml  stokes4_3D.xml  stokes5.xml  stokes6.xml  stokes_B.xml  stokes_L.xml  stokes_L2.xml  stokes_L3.xml  stokes_L4.xml  stokes_THCM.xml  stokes_THCM2.xml  stokes_THCM3.xml  stokes_THCM4.xml  stokes_THCM5.xml  threeD1.xml
testSuite/rev_tests/: README  dataparser.py  mail_results.py  runtest.py  submit_test_rev  test_rev.py  testscript
testSuite/unit_tests/: CMakeLists.txt  GaleriExt_Darcy2D.C  GaleriExt_Darcy2D.cpp  GaleriExt_Darcy3D.C  GaleriExt_Darcy3D.cpp  GaleriExt_Stokes2D.C  GaleriExt_Stokes2D.cpp  GaleriExt_Stokes3D.C  GaleriExt_Stokes3D.cpp  HYMLS_AugmentedMatrix.cpp  HYMLS_BorderedSolver.cpp  HYMLS_CartesianPartitioner.C  HYMLS_CartesianPartitioner.cpp  HYMLS_CoarseSolver.cpp  HYMLS_ComplexOperator.cpp  HYMLS_ComplexSolver.cpp  HYMLS_DenseUtils.C  HYMLS_DenseUtils.cpp  HYMLS_FakeComm.C  HYMLS_FakeComm.cpp  HYMLS_FakeComm.hpp  HYMLS_HierarchicalMap.C  HYMLS_HierarchicalMap.cpp  HYMLS_OverlappingPartitioner.C  HYMLS_OverlappingPartitioner.cpp  HYMLS_Preconditioner.C  HYMLS_Preconditioner.cpp  HYMLS_ProjectedOperator.C  HYMLS_ProjectedOperator.cpp  HYMLS_SkewCartesianPartitioner.C  HYMLS_SkewCartesianPartitioner.cpp  HYMLS_Solver.C  HYMLS_Solver.cpp  HYMLS_SparseDirectSolver.cpp  HYMLS_StandardNodeClassifier.C  HYMLS_Tester.C  HYMLS_Tester.cpp  HYMLS_Tools.C  HYMLS_Tools.cpp  HYMLS_UnitTestData.H.in  (+7 more)
(+10 files in other folders)
